# DATreeMap-Test

./: .dockerignore  .env.example  DOCKER_SETUP.md  Dockerfile  README.md  Tree Dataset_De Anza College_Backup.csv  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  index.html  nginx.conf  pyproject.toml  script.js  start.sh  styles.css
config/: settings.py  urls.py
config/settings/: production.py
nginx/: Dockerfile  nginx.conf
scripts/: start-prod.sh
static/css/: map.css  styles.css
static/js/: map.js
templates/: base.html
templates/admin/: base_site.html
templates/trees/: drf_test.html  map.html
trees/: admin.py  models.py  serializers.py  urls.py  views.py
trees/management/commands/: import_trees.py  wait_for_db.py
trees/migrations/: 0001_initial.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_rename_is_host_user_is_contributor.py
